# tg-react

./: .coveragerc  .gitignore  .prospector.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dummy_settings.py  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
demo/: setup.py
demo/example/: handlers.py  settings.py  urls.py  wsgi.py
docs/: changelog.rst  conf.py  getting_started.rst  index.rst  installation.rst  modules.rst  tg_react.api.accounts.rst  tg_react.api.rst  tg_react.management.commands.rst  tg_react.management.rst  tg_react.rst  tips.rst  usage.rst
example/: dummy_test.js  invalid_urls.py  resolver_urls.py  settings.py  test_settings.py  urls.py  wsgi.py
example/locale/en/LC_MESSAGES/: djangojs.po
example/locale/et/LC_MESSAGES/: djangojs.po
example/locale/ru/LC_MESSAGES/: djangojs.po
tests/: conftest.py  test_accounts.py  test_flatten_urls.py  test_languages.py  test_locale_middleware.py  test_makemessages.py  test_models.py  test_webpack_constants.py
tg_react/: __init__.py  apiurls.py  apps.py  catalogue_legacy.py  language.py  middleware.py  routers.py  settings.py  webpack.py
tg_react/api/accounts/: serializers.py  urls.py  views.py
tg_react/locale/en/LC_MESSAGES/: django.mo  django.po
tg_react/locale/en_US/LC_MESSAGES/: django.mo  django.po
tg_react/locale/et/LC_MESSAGES/: django.mo  django.po
tg_react/locale/ru/LC_MESSAGES/: django.mo  django.po
tg_react/management/commands/: extract-js-i18n.js  makemessages.py  react_makemessages.py  webpack_constants.py
tg_react/templates/emails/: base.txt  password_reset.txt
tg_react/templates/tg_react_emails/: password_reset.html
